--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2"
   },
