--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.0.2",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-sass": "^0.1.0"
   }
 }
