--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -18,7 +18,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
